# AytumLauncher

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  generate_icons.ps1
.github/workflows/: BuildV2.yml  build.yml  main.yml
data/: README.txt
sce_sys/: param.sfo
sce_sys/livearea/contents/: template.xml
scripts/: gen_icons.py  package_vpk.py
src/: audio.c  audio.h  decoder.c  decoder.h  fileio.c  fileio.h  graphics.c  graphics.h  input.c  input.h  jad_parser.c  jad_parser.h  jvm_core.c  jvm_core.h  launcher.c  launcher.h  main.c  midp_api.c  midp_api.h  network.c  network.h  pvf_stubs.c
